--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="google-site-verification" content="fFdd8Eh92EWX5Ff6jTa_JpjUYuveQ3XWRfEbr0kiGMM" />
     <meta name="description" content="Dokumentasi Laravel : Dokumentasi Laravel dalam bahasa Indonesia." />
-
+    <link rel="canonical" href="http://laravel.catatanbelajar.com">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Dokumentasi Laravel</title>
