Tambahkan pengalihan domain

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <meta name="description" content="Dokumentasi Laravel : Dokumentasi Laravel dalam bahasa Indonesia." />
     <link rel="canonical" href="http://laravel.catatanbelajar.com">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <script type="text/javascript">
+    	if(window.location.hostname == "idhamperdameian.github.io")
+    	{
+    		window.location.href = "//laravel.catatanbelajar.com";
+    	}
+    </script>
     <title>Dokumentasi Laravel</title>
   </head>
 
