--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="canonical" href="http://laravel.catatanbelajar.com">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <script type="text/javascript">
-    	if(window.location.hostname == "idhamperdameian.github.io")
-    	{
-    		window.location.href = "//laravel.catatanbelajar.com";
-    	}
+        if(window.location.hostname == "idhamperdameian.github.io")
+        {
+            window.location.href = "//laravel.catatanbelajar.com";
+        }
     </script>
     <title>Dokumentasi Laravel</title>
   </head>
@@ -79,7 +79,16 @@ $ git checkout gh-pages
       </footer>
     </div>
 
-    
+    <script type="text/javascript">
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-41427201-6', 'catatanbelajar.com');
+        ga('send', 'pageview');
+
+    </script>
 
   </body>
 </html>
